--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "scripts": {
     "start:firefox": "web-ext run",
-    "build:firefox": "web-ext build --overwrite-dest --artifacts-dir=www",
-    "sign:firefox": "web-ext sign --api-key=$MOZ_USER --api-secret=$MOZ_KEY --channel=unlisted --artifacts-dir=www",
+    "build:firefox": "web-ext build --overwrite-dest --artifacts-dir=docs",
+    "sign:firefox": "web-ext sign --api-key=$MOZ_USER --api-secret=$MOZ_KEY --channel=unlisted --artifacts-dir=docs",
     "lint": "web-ext lint"
   },
   "devDependencies": {
@@ -17,7 +17,7 @@
       "LICENSE",
       "README.md",
       "secrets.txt",
-      "www"
+      "docs"
     ]
   }
 }
